<resources>
    <string name="app_name">Blink Message</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout_label">Log out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_lavel">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup_error_message">Please make sure to enter a username, password and emal address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure to enter a username and password!</string>
    <string name="login_error_title">CANCEL</string>
    <string name="empty_inbox_label">No new Messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We are sorry!</string>
    <string name="menu_camera_label">menu_camera_title</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_warning">The size of the video must be less than 10 MB!</string>
    <string name="error_open_file">There was an error openning the file!</string>
    <string name="file_too_large">The selected file is too large!</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="Empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">The was an error with the file selected! Please select a different file</string>
    <string name="error_selecting_tile_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="title_activity_view_image">Blink Message</string>
    <string name="content_desc_background">Ribit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="condent_desc_user_avatar">User avatar</string>
    <string name="condent_desc_user_ckeckmark">User checkmark</string>
    <string name="push_message">You have a new blink message from %s!</string>
</resources>

