<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="koemdzhiev.com.blinkmessage.SignUpActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:text="@string/app_name"
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subTitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFiledContainer">

        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">

            <requestFocus/>
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText"/>

        <EditText
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:text="@string/sign_up_button_label"
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"/>
    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/calcelButton"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"/>

</RelativeLayout>
