<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="koemdzhiev.com.blinkmessage.LoginActivity"
                style="@style/AuthBackground">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>


    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:text="@string/app_name"
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subTitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFiledContainer">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordField"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login_button_lavel"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/text_color"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
